unpackaged/main/default/objects/Invoice__c/fields/Billing_Account_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Email_address__c</fullName>
    <formula>BillingAccount__r.Billing_Contact_Email_address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Email address</label>
    <type>Text</type>
</CustomField>