unpackaged/main/default/objects/Invoice__c/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Billing)</relationshipLabel>
    <relationshipName>AccountBillingInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>