unpackaged/main/default/objects/Invoice__c/fields/BillingAddress2__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress2__c</fullName>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>