unpackaged/main/default/objects/Invoice__c/fields/BillingInstructions__c.field-meta.xml
<CustomField>
    <fullName>BillingInstructions__c</fullName>
    <formula>BillingAccount__r.BillingInstructions__c</formula>
    <label>Special Billing Instructions</label>
    <type>Text</type>
</CustomField>