unpackaged/main/default/objects/Invoice__c/fields/CustomerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>Customer Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>