unpackaged/main/default/objects/Invoice__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>