unpackaged/main/default/objects/Invoice__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>CASE(TEXT(Company__c), 
  'SOLUTIONS', Opportunity__r.Owner.SageCodeSOL__c, 
  'PLM', Opportunity__r.Owner.SageCodePLM__c,
'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>