unpackaged/main/default/objects/Invoice__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>TEXT( Opportunity__r.Division__c )</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>