unpackaged/main/default/objects/Invoice__c/fields/HardwareRevenuePerc__c.field-meta.xml
<CustomField>
    <fullName>HardwareRevenuePerc__c</fullName>
    <formula>IF(HardwareRevenue__c = 0,
	0,
	IF(Opportunity__r.HardwareRevenue__c = 0,
		1,
		HardwareRevenue__c / Opportunity__r.HardwareRevenue__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>