unpackaged/main/default/objects/Invoice__c/fields/InvocieLink__c.field-meta.xml
<CustomField>
    <fullName>InvocieLink__c</fullName>
    <formula>HYPERLINK("/"+Id,InvoiceNumber__c,"_top")</formula>
    <label>Invoice</label>
    <type>Text</type>
</CustomField>