unpackaged/main/default/objects/Invoice__c/fields/Invoice_Pending_Activation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Pending_Activation__c</fullName>
    <formula>Opportunity__r.Opportunity_Forecast_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Pending Activation</label>
    <type>Text</type>
</CustomField>