unpackaged/main/default/objects/Invoice__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <formula>IF(LEFT(Name,3) == "INV",
  Opportunity__r.Quote_Number_Revised__c+"-"+Name,
  Opportunity__r.Quote_Number_Revised__c+"-"+CompanyAbbr__c+Name
)</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>