unpackaged/main/default/objects/Invoice__c/fields/IsApexContext__c.field-meta.xml
<CustomField>
    <fullName>IsApexContext__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Context</label>
    <type>Checkbox</type>
</CustomField>