unpackaged/main/default/objects/Invoice__c/fields/IsClone__c.field-meta.xml
<CustomField>
    <fullName>IsClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>