unpackaged/main/default/objects/Invoice__c/fields/IsCreatedByUser__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedByUser__c</fullName>
    <formula>IF($User.Id =  CreatedById, "TRUE", "FALSE")</formula>
    <label>Created by Me</label>
    <type>Text</type>
</CustomField>