unpackaged/main/default/objects/Invoice__c/fields/IsDue__c.field-meta.xml
<CustomField>
    <fullName>IsDue__c</fullName>
    <formula>IF( Date__c - TODAY() &lt; 30,
1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>