unpackaged/main/default/objects/Invoice__c/fields/IsFactored__c.field-meta.xml
<CustomField>
    <fullName>IsFactored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factored</label>
    <type>Checkbox</type>
</CustomField>