unpackaged/main/default/objects/Invoice__c/fields/IsInvoice__c.field-meta.xml
<CustomField>
    <fullName>IsInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>