unpackaged/main/default/objects/Invoice__c/fields/MaintenanceMargin__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceMargin__c</fullName>
    <formula>Opportunity__r.MaintenanceMargin__c * MaintenanceRevenuePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>