unpackaged/main/default/objects/Invoice__c/fields/MaintenanceRevenue__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceRevenue__c</fullName>
    <label>Maintenance Revenue</label>
    <summarizedField>InvoiceLineItem__c.NetAmount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.ProductType_ro__c</field>
        <operation>equals</operation>
        <value>Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>