unpackaged/main/default/objects/Invoice__c/fields/NoLineItemsNoBusinessType__c.field-meta.xml
<CustomField>
    <fullName>NoLineItemsNoBusinessType__c</fullName>
    <label>Line Items w/o Business Type</label>
    <summaryFilterItems>
        <field>InvoiceLineItem__c.BusinessType2__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>