unpackaged/main/default/objects/Invoice__c/fields/NominalCode__c.field-meta.xml
<CustomField>
    <fullName>NominalCode__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Type, "Marketing Funding/Cost"),
  "7700",
  CASE(CompanyAbbr__c,
    "SOL", "4601",
    "PLM", "4401",
    "4000")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nominal Code</label>
    <type>Text</type>
</CustomField>