unpackaged/main/default/objects/Invoice__c/fields/OtherMargin__c.field-meta.xml
<CustomField>
    <fullName>OtherMargin__c</fullName>
    <formula>Opportunity__r.OtherMargin__c  * OtherRevenuePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>