unpackaged/main/default/objects/Invoice__c/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <type>TextArea</type>
</CustomField>