unpackaged/main/default/objects/Invoice__c/fields/PLMBankDetailsEUR__c.field-meta.xml
<CustomField>
    <fullName>PLMBankDetailsEUR__c</fullName>
    <formula>"VAT NUMBER: "+Opportunity__r.Account.VAT_Number__c+BR()+BR()+

"VAT RATE APPLIED IS 0% BECAUSE OF"+BR()+
"REVERSE"+BR()+
"CHARGE MECHANISM"+BR()+BR()+

"PAYMENT TERMS: 30 DAYS FROM DATE OF INVOICE"+BR()+BR()+

"PAYABLE TO"+BR()+
"MAJENTA PLM LTD"+BR()+BR()+

"HSBC BANK PLC"+BR()+
"SORT CODE: 40-05-15"+BR()+
"ACCOUNT NUMBER: 73938425"+BR()+
"IBAN: GB27MIDL40051573938425"+BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLM Bank Details EUR</label>
    <type>Text</type>
</CustomField>