unpackaged/main/default/objects/Invoice__c/fields/Ref__c.field-meta.xml
<CustomField>
    <fullName>Ref__c</fullName>
    <formula>InvoiceNumber__c</formula>
    <label>Ref</label>
    <type>Text</type>
</CustomField>