unpackaged/main/default/objects/Invoice__c/fields/RevenuePercentage__c.field-meta.xml
<CustomField>
    <fullName>RevenuePercentage__c</fullName>
    <formula>NetAmount__c / Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>