unpackaged/main/default/objects/Invoice__c/fields/SageAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SageAccountNumber__c</fullName>
    <formula>IF( CompanyAbbr__c == "PLM",
  CASE( CurrencyIsoCode , 
    "EUR", BillingAccount__r.SageAccountNumberPLMEUR__c ,
    "USD", BillingAccount__r.SageAccountNumberPLMUSD__c ,
    BillingAccount__r.SageAccountNumberPLMGBP__c
  ),
  CASE( CurrencyIsoCode , 
    "EUR", BillingAccount__r.SageAccountNumberSOLEUR__c ,
    "USD", BillingAccount__r.SageAccountNumberSOLUSD__c ,
    BillingAccount__r.SageAccountNumberSOLGBP__c
  )
)</formula>
    <label>Sage Account Number</label>
    <type>Text</type>
</CustomField>