unpackaged/main/default/objects/Invoice__c/fields/ServicesRevenuePerc__c.field-meta.xml
<CustomField>
    <fullName>ServicesRevenuePerc__c</fullName>
    <formula>IF(ServicesRevenue__c = 0,
	0,
	IF(Opportunity__r.ServicesRevenue__c = 0,
		1,
		ServicesRevenue__c / Opportunity__r.ServicesRevenue__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>