unpackaged/main/default/objects/Invoice__c/fields/ShippingAddress2__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress2__c</fullName>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>