unpackaged/main/default/objects/Invoice__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <formula>Opportunity__r.Account.Name+BR()+
Opportunity__r.Account.ShippingStreet+BR()+
Opportunity__r.Account.ShippingCity+BR()+
Opportunity__r.Account.ShippingState+BR()+ 
Opportunity__r.Account.ShippingPostalCode+BR()+
Opportunity__r.Account.ShippingCountry+BR()+
"["+HYPERLINK("https://majenta--testbox.cs2.my.salesforce.com/"+Opportunity__r.Account.Id+"/e?retURL="+Id+"#head_7_ep", "Update")+"]"</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>