unpackaged/main/default/objects/Invoice__c/fields/SoftwareRevenuePerc__c.field-meta.xml
<CustomField>
    <fullName>SoftwareRevenuePerc__c</fullName>
    <formula>IF(SoftwareRevenue__c = 0,
	0,
	IF(Opportunity__r.SoftwareRevenue__c = 0,
		1,
		SoftwareRevenue__c / Opportunity__r.SoftwareRevenue__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>