unpackaged/main/default/objects/Invoice__c/fields/SolidEdgeBankDetailsGBP__c.field-meta.xml
<CustomField>
    <fullName>SolidEdgeBankDetailsGBP__c</fullName>
    <formula>"PAYMENT TERMS: 30 DAYS FROM DATE OF INVOICE"+BR()+BR()+

"PAYABLE TO"+BR()+
"MAJENTA PLM LTD"+BR()+BR()+

"HSBC BANK PLC"+BR()+
"SORT CODE: 40-17-08"+BR()+
"ACCOUNT NUMBER: 82276135"+BR()+
"SWIFT CODE: MIDLGB22"+BR()+
"IBAN: GB54MIDL40170882276135"+BR()</formula>
    <label>Solid Edge Bank Details GBP</label>
    <type>Text</type>
</CustomField>