unpackaged/main/default/objects/Invoice__c/fields/SolutionsFactoringEUR__c.field-meta.xml
<CustomField>
    <fullName>SolutionsFactoringEUR__c</fullName>
    <formula>"***PAYMENT TERMS - 30 DAYS FROM DATE OF INVOICE***"
+BR()+BR()+ 

"CIF Re: MAJENTA SOLUTIONS LTD"+BR()+BR()+ 

"Sort Code: 30-95-89"+BR()+
"Account No: 86545630"+BR()+BR()+

"IBAN: GB75LOYD30958986545630"+BR()+
"BIC: LOYDGB21041"+BR()+BR()</formula>
    <label>Solutions Factoring EUR</label>
    <type>Text</type>
</CustomField>