unpackaged/main/default/objects/Invoice__c/fields/SolutionsFactoringGBP__c.field-meta.xml
<CustomField>
    <fullName>SolutionsFactoringGBP__c</fullName>
    <description>This field contains the current factoring company details for Majenta Solutions Limited Invoices in GBP. The contents of this field is copied in to the Notes__c field by workflow for compliance.

---

"***PAYMENT TERMS - 30 DAYS FROM DATE OF INVOICE***"
+BR()+BR()+

"CIF Re: Majenta Solutions Ltd"+BR()+BR()+

"Code: 30-95-89"+BR()+
"Account: 48364568"+BR()</description>
    <formula>"***PAYMENT TERMS - 30 DAYS FROM DATE OF INVOICE***"
+BR()+BR()+

"CIF Re: Majenta Solutions Ltd"+BR()+BR()+

"Code: 30-95-89"+BR()+
"Account: 48364568"+BR()</formula>
    <label>Solutions Factoring GBP</label>
    <type>Text</type>
</CustomField>