unpackaged/main/default/objects/Invoice__c/validationRules/Cannot_change_Bill_To_after_import.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Bill_To_after_import</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(IsPostedToSage2__c, "Yes") 
&amp;&amp; ISCHANGED(BillingAccount__c)</errorConditionFormula>
    <errorDisplayField>BillingAccount__c</errorDisplayField>
    <errorMessage>The Bill To Account cannot be changed after the Invoice has been posted to SAGE.</errorMessage>
</ValidationRule>