unpackaged/main/default/objects/Invoice__c/validationRules/Invoice_Cannot_be_Modified_after_Issued.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Cannot_be_Modified_after_Issued</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
IsInvoice__c,
NOT(ISCHANGED(IsInvoice__c)),
NOT(ISCHANGED(IsPostedToSage2__c)),
NOT(ISCHANGED(UploadedToHitachi__c))
),
AND(
NOT(IsInvoice__c),
ISCHANGED(IsInvoice__c),
NOT($User.InvoiceAdministrator__c),
(Age__c&gt;60)
)
)
&amp;&amp; $Profile.Name != "System Administrator"</errorConditionFormula>
    <errorMessage>This invoice can no longer be modified, as it has already been issued.</errorMessage>
</ValidationRule>