unpackaged/main/default/objects/Invoice__c/validationRules/Invoice_Date_must_be_in_Current_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Date_must_be_in_Current_Month</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(IsApexContext__c),
  NOT($User.InvoiceAdministrator__c),
  OR(ISNEW(),ISCHANGED(Date__c)),
  Date__c &lt; TODAY(),
  MONTH(Date__c) != MONTH(TODAY()),
  NOT(ISCHANGED(IsPostedToSage2__c)),
  NOT(ISCHANGED(UploadedToHitachi__c))
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Invoice Date must be within the current month.</errorMessage>
</ValidationRule>