unpackaged/main/default/objects/Invoice__c/validationRules/Mixed_Business_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Mixed_Business_Type</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  IsInvoice__c &amp;&amp; ISCHANGED(IsInvoice__c),
  ISCHANGED(CurrencyIsoCode)
)
&amp;&amp; ISPICKVAL(Opportunity__r.Type , "Existing Customer Mixed Business")
&amp;&amp; NoLineItemsNoBusinessType__c &gt; 0</errorConditionFormula>
    <errorMessage>On mixed business opportunities you must specify the business type for each Invoice Line Item.</errorMessage>
</ValidationRule>