unpackaged/main/default/objects/Invoice__c/listViews/AllInvoices.listView-meta.xml
<ListView>
    <fullName>AllInvoices</fullName>
    <columns>InvocieLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Division__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsInvoice__c</columns>
    <columns>IsPostedtoSage__c</columns>
    <columns>Print__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>