unpackaged/main/default/objects/Invoice__c/listViews/PLMInvoices.listView-meta.xml
<ListView>
    <fullName>PLMInvoices</fullName>
    <columns>InvocieLink__c</columns>
    <columns>Division__c</columns>
    <columns>SageAccountNumber__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsInvoice__c</columns>
    <columns>IsPostedToSage2__c</columns>
    <columns>IsPostedtoSage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>PLM</value>
    </filters>
    <label>PLM Invoices - All</label>
</ListView>