unpackaged/main/default/objects/Invoice__c/listViews/PLMInvoicesImport.listView-meta.xml
<ListView>
    <fullName>PLMInvoicesImport</fullName>
    <columns>InvocieLink__c</columns>
    <columns>Department__c</columns>
    <columns>SageAccountNumber__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsInvoice__c</columns>
    <columns>IsPostedToSage2__c</columns>
    <columns>IsFactored__c</columns>
    <columns>UploadedToHitachi__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>PLM</value>
    </filters>
    <filters>
        <field>IsInvoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsPostedToSage2__c</field>
        <operation>equals</operation>
    </filters>
    <label>PLM Invoices - To Import</label>
</ListView>