unpackaged/main/default/objects/Invoice__c/listViews/PLMInvoicesLastMonth.listView-meta.xml
<ListView>
    <fullName>PLMInvoicesLastMonth</fullName>
    <columns>InvocieLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsInvoice__c</columns>
    <columns>IsPostedToSage2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>PLM</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>PLM Invoices - Last Month</label>
</ListView>