unpackaged/main/default/objects/Invoice__c/listViews/SolidEdgeInvoices.listView-meta.xml
<ListView>
    <fullName>SolidEdgeInvoices</fullName>
    <columns>InvocieLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsInvoice__c</columns>
    <columns>IsPostedtoSage__c</columns>
    <columns>Print__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Solid Edge</value>
    </filters>
    <label>Solid Edge Invoices - All</label>
</ListView>