unpackaged/main/default/objects/Invoice__c/listViews/SolidEdgeInvoicesThisMonth.listView-meta.xml
<ListView>
    <fullName>SolidEdgeInvoicesThisMonth</fullName>
    <columns>InvocieLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsFactored__c</columns>
    <columns>IsInvoice__c</columns>
    <columns>IsPostedtoSage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Solid Edge</value>
    </filters>
    <filters>
        <field>IsInvoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Solid Edge Invoices - This Month</label>
</ListView>